--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- prettier-ignore -->
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon.png"/>
+    <link rel="stylesheet" href="css/style.css" />
     <title>Frontend Mentor | NFT preview card component</title>
   </head>
 
