--- a/index.html
+++ b/index.html
@@ -10,11 +10,48 @@
   </head>
 
   <body>
-    Equilibrium #3429 Our Equilibrium collection promotes balance and calm.
-    0.041 ETH 3 days left Creation of Jules Wyvern
+    <!-- main -->
+    <main>
+      <!-- card -->
+      <div class="card">
+        <!-- card-image-->
+        <div class="card-image">
+          <img src="images/image-equilibrium.jpg" alt="equilibrium" />
+        </div>
+        <!-- card-info -->
+        <div class="card-info">
+          <!-- card-title -->
+          <div class="card-title">
+            <h1>Equilibrium #3429</h1>
+          </div>
+          <!-- card-description -->
+          <div class="card-description">
+            <p>Our Equilibrium collection promotes balance and calm.</p>
+          </div>
+          <!-- price-info -->
+          <div class="price-info">
+            <div class="price">
+              <img src="images/icon-ethereum.svg" alt="icon-eth" />
+              <p>0.041 ETH</p>
+            </div>
+            <div class="time">
+              <img src="images/icon-clock.svg" alt="icon-clock" />
+              <p>3 days left</p>
+            </div>
+          </div>
+        </div>
+        <!-- creator -->
+        <div class="creator">
+          <img src="images/image-avatar.png" alt="avatar" />
+          <p>Creation of Jules Wyvern</p>
+        </div>
+      </div>
+    </main>
     <!-- prettier-ignore -->
+    <footer>
     <div class="attribution">Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://github.com/kbastalec" target="_blank">kbastalec</a>.
     </div>
+    </footer>
   </body>
 </html>
