--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <p>Our Equilibrium collection promotes balance and calm.</p>
           </div>
           <!-- price-info -->
-          <div class="price-info">
+          <div class="coin-info">
             <div class="price">
               <img src="images/icon-ethereum.svg" alt="icon-eth" />
               <p>0.041 ETH</p>
@@ -43,7 +43,7 @@
         <!-- creator -->
         <div class="creator">
           <img src="images/image-avatar.png" alt="avatar" />
-          <p>Creation of Jules Wyvern</p>
+          <p><span>Creation of</span> Jules Wyvern</p>
         </div>
       </div>
     </main>
