--- a/index.html
+++ b/index.html
@@ -15,14 +15,17 @@
       <!-- card -->
       <div class="card">
         <!-- card-image-->
-        <div class="card-image">
-          <img src="images/image-equilibrium.jpg" alt="equilibrium" />
+        <div class="image">
+          <!-- prettier-ignore -->
+          <img class="card-image" src="images/image-equilibrium.jpg" alt="equilibrium" />
+          <div class="overlay"></div>
+          <img class="overlay-img" src="images/icon-view.svg" alt="eye" />
         </div>
         <!-- card-info -->
         <div class="card-info">
           <!-- card-title -->
           <div class="card-title">
-            <h1>Equilibrium #3429</h1>
+            <h3>Equilibrium #3429</h3>
           </div>
           <!-- card-description -->
           <div class="card-description">
@@ -50,7 +53,7 @@
     <!-- prettier-ignore -->
     <footer>
     <div class="attribution">Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://github.com/kbastalec" target="_blank">kbastalec</a>.
+    &nbsp;Coded by <a href="https://github.com/kbastalec" target="_blank">kbastalec</a>.
     </div>
     </footer>
   </body>
